--- a/.env.sample
+++ b/.env.sample
@@ -7,19 +7,10 @@ UMASK=022
 HOST_DOMAIN=servarr.local
 
 # Paths
-CACHE_DRIVE=/mnt/cache
+# CACHE_DRIVE=/mnt/cache
 DATA_BASE_PATH=/mnt/arr/data
-
-
 MEDIA_BASE_PATH=${DATA_BASE_PATH}/media
-DOWNLOADS_BASE_PATH=${CACHE_DRIVE}/downloads
-# PENDING_BASE_PATH=${CACHE_DRIVE}/pending
-
-
-ARR_MEDIA_PATH=arr-media
-
-
-
+DOWNLOADS_BASE_PATH=${DATA_BASE_PATH}/downloads
 
 # Media Paths
 MEDIA_MOVIES_PATH=${MEDIA_BASE_PATH}/movies
@@ -38,11 +29,15 @@ DOWNLOAD_COMICS_PATH=${DOWNLOADS_BASE_PATH}/comics
 DOWNLOAD_TORRENT_PATH=${DOWNLOADS_BASE_PATH}/torrent
 DOWNLOAD_NZBD_PATH=${DOWNLOADS_BASE_PATH}/nzbd
 
+# checkrr
+CHECKRR_REF=tdarr
+HOST_CHECKRR_URL=${CHECKRR_REF}.${HOST_DOMAIN}
+CHECKRR_PORT=8585
 
-# API KEYS
-RADARR_API_KEY=
-SONARR_API_KEY=
-LIDARR_API_KEY=
+# Dozzle
+DOZZLE_REF=dozzle
+HOST_DOZZLE_URL=${DOZZLE_REF}.${HOST_DOMAIN}
+DOZZLE_PORT=8082
 
 # Gluetun
 GLUETUN_REFNAME=gluetun
@@ -52,21 +47,18 @@ GLUETUN_PORT=
 HOMEPAGE_REF=homepage
 HOST_HOMEPAGE_URL=${HOMEPAGE_REF}.${HOST_DOMAIN}
 HOMEPAGE_UI_PORT=3000
-
-# SABnzbd
-SABNZBD_REF=sabnzbd
-HOST_SABNZBD_URL=${SABNZBD_REF}.${HOST_DOMAIN}
-SABNZBD_UI_PORT=8080
-
-# Traefik
-TRAEFIK_REF=traefik
-HOST_TRAEFIK_URL=${TRAEFIK_REF}.${HOST_DOMAIN}
-TRAEFIK_PORT=8089
+HOMEPAGE_ALLOWED_HOSTS=*
 
 # Jellyfin
 JELLYFIN_REF=jellyfin
 HOST_JELLYFIN_URL=${JELLYFIN_REF}.${HOST_DOMAIN}
 JELLYFIN_PORT=8096
+
+# Lidarr
+LIDARR_REF=lidarr
+HOST_LIDARR_URL=${LIDARR_REF}.${HOST_DOMAIN}
+LIDARR_PORT=8686
+LIDARR_API_KEY=
 
 # Prowlarr
 PROWLARR_REF=prowlarr
@@ -77,3 +69,25 @@ PROWLARR_PORT=9696
 RADARR_REF=radarr
 RADARR_HOST_URL=${RADARR_REF}.${HOST_DOMAIN}
 RADARR_PORT=7878
+RADARR_API_KEY=
+
+# SABnzbd
+SABNZBD_REF=sabnzbd
+HOST_SABNZBD_URL=${SABNZBD_REF}.${HOST_DOMAIN}
+SABNZBD_UI_PORT=8080
+
+# Sonarr
+SONARR_REF=sonarr
+HOST_SONARR_URL=${SONARR_REF}.${HOST_DOMAIN}
+SONARR_UI_PORT=8989
+SONARR_API_KEY=
+
+# Tdarr
+TDARR_REF=tdarr
+HOST_TDARR_URL=${TDARR_REF}.${HOST_DOMAIN}
+TDARR_PORT=8265
+
+# Traefik
+TRAEFIK_REF=traefik
+HOST_TRAEFIK_URL=${TRAEFIK_REF}.${HOST_DOMAIN}
+TRAEFIK_PORT=8089
