--- a/arr/radarr/radarr.compose.yaml
+++ b/arr/radarr/radarr.compose.yaml
@@ -1,7 +1,7 @@
 services:
   radarr:
     extends:
-      file: ../service.compose.yaml
+      file: ../service-base.compose.yaml
       service: arr-service
     image: lscr.io/linuxserver/radarr:latest
     container_name: radarr
@@ -9,17 +9,18 @@ services:
       - ./config:/config
       - ${MEDIA_MOVIES_PATH}:/data
       - ${ARR_MEDIA_PATH}:/media/arr
+    ports:
+      - ${RADARR_PORT}:7878 # Radarr
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.${RADARR_REFNAME}.entrypoints=web"
-      - "traefik.http.routers.${RADARR_REFNAME}.rule=Host(`${RADARR_HOST_URL}`)"
-      - "traefik.http.services.${RADARR_REFNAME}.loadbalancer.server.port=${RADARR_PORT}"
+      - "traefik.http.routers.${RADARR_REF}.entrypoints=web"
+      - "traefik.http.routers.${RADARR_REF}.rule=Host(`${RADARR_HOST_URL}`)"
+      - "traefik.http.services.${RADARR_REF}.loadbalancer.server.port=${RADARR_PORT}"
       - homepage.group=Arr
       - homepage.name=Radarr
       - homepage.icon=radarr.png
+      - homepage.showstats=true
       - homepage.href=http://${RADARR_HOST_URL}/
       - homepage.description=See all your upcoming movies in one convenient location. 
-    ports:
-      - 7878:7878 # Radarr
 
     restart: unless-stopped
