--- a/media/jellyfin/jellyfin.compose.yaml
+++ b/media/jellyfin/jellyfin.compose.yaml
@@ -1,12 +1,11 @@
 services:
   jellyfin-nvidia:
     extends:
-      file: ../service.compose.yaml
+      file: ../service-base.compose.yaml
       service: arr-service
     image: lscr.io/linuxserver/jellyfin:latest
     container_name: jellyfin
     user: root
-    #   - JELLYFIN_PublishedServerUrl=
     volumes:
       - ./config:/config
       - ${MEDIA_MOVIES_PATH}:/Films
@@ -18,12 +17,13 @@ services:
       - 7359:7359/udp # jellyfin Service Discovery
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.${JELLYFIN_REFNAME}.entrypoints=web"
-      - "traefik.http.routers.${JELLYFIN_REFNAME}.rule=Host(`${HOST_JELLYFIN_URL}`)"
-      - "traefik.http.services.${JELLYFIN_REFNAME}.loadbalancer.server.port=${JELLYFIN_PORT}"
+      - "traefik.http.routers.${JELLYFIN_REF}.entrypoints=web"
+      - "traefik.http.routers.${JELLYFIN_REF}.rule=Host(`${HOST_JELLYFIN_URL}`)"
+      - "traefik.http.services.${JELLYFIN_REF}.loadbalancer.server.port=${JELLYFIN_PORT}"
       - homepage.group=Media
       - homepage.name=Jellyfin
       - homepage.icon=jellyfin.png
+      - homepage.showstats=true
       - homepage.href=http://${HOST_JELLYFIN_URL}/
       - homepage.description=Media solution that puts you in control of your media. Stream to any device from your own server, with no strings attached.
     restart: unless-stopped
