--- a/utility/traefik/traefik.compose.yaml
+++ b/utility/traefik/traefik.compose.yaml
@@ -7,17 +7,18 @@
         - "--api.insecure=true"
         - "--providers.docker=true"
         - "--entryPoints.web.address=:80"
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
       ports:
         - 80:80
         - ${TRAEFIK_PORT}:8080
-      volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
       labels:  
         - traefik.enable=true
-        - traefik.http.routers.traefik.entrypoints=web
-        - traefik.http.routers.traefik.rule=Host(`${TRAEFIK_HOST}`)
-        - traefik.http.services.traefik.loadbalancer.server.port=80
+        - traefik.http.routers.${TRAEFIK_REF}.entrypoints=web
+        - traefik.http.routers.${TRAEFIK_REF}.rule=Host(`${TRAEFIK_HOST}`)
+        - traefik.http.services.${TRAEFIK_REF}.loadbalancer.server.port=80
         - homepage.group=Utils
         - homepage.name=Traefik
         - homepage.icon=traefik.png
+        - homepage.showstats=true
         - homepage.href=http://${TRAEFIK_HOST}/
