fix config bugs

--- a/.env.sample
+++ b/.env.sample
@@ -12,6 +12,8 @@ DATA_BASE_PATH=/mnt/arr/data
 MEDIA_BASE_PATH=${DATA_BASE_PATH}/media
 DOWNLOADS_BASE_PATH=${DATA_BASE_PATH}/downloads
 
+ARR_MEDIA_PATH=${MEDIA_BASE_PATH}
+
 # Media Paths
 MEDIA_MOVIES_PATH=${MEDIA_BASE_PATH}/movies
 MEDIA_SERIES_PATH=${MEDIA_BASE_PATH}/series
@@ -79,7 +81,7 @@ SABNZBD_UI_PORT=8080
 # Sonarr
 SONARR_REF=sonarr
 HOST_SONARR_URL=${SONARR_REF}.${HOST_DOMAIN}
-SONARR_UI_PORT=8989
+SONARR_PORT=8989
 SONARR_API_KEY=
 
 # Tdarr
