--- a/arr/lidarr/lidarr.compose.yaml
+++ b/arr/lidarr/lidarr.compose.yaml
@@ -1,7 +1,7 @@
 services:
   lidarr:
     extends:
-      file: ../service-base.compose.yaml
+      file: ../../service-base.compose.yaml
       service: arr-service
     image: lscr.io/linuxserver/lidarr:latest
     container_name: lidarr
@@ -9,7 +9,6 @@ services:
       - ./config:/config
       - ${MEDIA_MUSIC_PATH}:/music
       - ${DOWNLOAD_MUSIC_PATH}:/downloads
-      - ${ARR_MEDIA_PATH}:/media/arr
     ports:
       - ${LIDARR_PORT}:8686
     labels:
