--- a/utility/gluetun/gluetun.compose.yaml
+++ b/utility/gluetun/gluetun.compose.yaml
@@ -1,7 +1,7 @@
 services:
   gluetun:
     extends:
-      file: ../service-base.compose.yaml
+      file: ../../service-base.compose.yaml
       service: arr-service
     image: qmcgaw/gluetun:latest
     container_name: gluetun
