--- a/utility/traefik/traefik.compose.yaml
+++ b/utility/traefik/traefik.compose.yaml
@@ -15,10 +15,10 @@
       labels:  
         - traefik.enable=true
         - traefik.http.routers.${TRAEFIK_REF}.entrypoints=web
-        - traefik.http.routers.${TRAEFIK_REF}.rule=Host(`${TRAEFIK_HOST}`)
+        - traefik.http.routers.${TRAEFIK_REF}.rule=Host(`${HOST_TRAEFIK_URL}`)
         - traefik.http.services.${TRAEFIK_REF}.loadbalancer.server.port=80
         - homepage.group=Utils
         - homepage.name=Traefik
         - homepage.icon=traefik.png
         - homepage.showstats=true
-        - homepage.href=http://${TRAEFIK_HOST}/
+        - homepage.href=http://${HOST_TRAEFIK_URL}/
