--- a/vpn-service.compose.yaml
+++ b/vpn-service.compose.yaml
@@ -2,11 +2,11 @@ services:
   arr-service:
     network_mode: "service:gluetun"
     environment:
-      PUID:${PUID}
-      PGID:${PUID}
-      TZ:${PUID}
+      PUID: ${PUID}
+      PGID: ${PUID}
+      TZ: ${PUID}
     volumes:
-      ${MEDIA_BASE_PATH}:/arr
+      - ${ARR_MEDIA_PATH}:/media/arr
     depends_on:
       gluetun:
         condition: service_healthy
