add new services and fix bugs

--- a/.env.sample
+++ b/.env.sample
@@ -31,14 +31,29 @@ DOWNLOAD_COMICS_PATH=${DOWNLOADS_BASE_PATH}/comics
 DOWNLOAD_TORRENT_PATH=${DOWNLOADS_BASE_PATH}/torrent
 DOWNLOAD_NZBD_PATH=${DOWNLOADS_BASE_PATH}/nzbd
 
-# checkrr
+
+#### Service Values ####
+
+# Bazarr
+BAZARR_REF=bazarr
+BAZARR_URL=${BAZARR_REF}.${HOST_DOMAIN}
+BAZARR_PORT=6767
+
+# Beszel
+BESZEL_REF=beszel
+BESZEL_URL=${BESZEL_REF}.${HOST_DOMAIN}
+BESZEL_PORT=8090
+BESZEL_KEY='ssh_...'
+BESZEL_TOKEN=
+
+# Checkrr
 CHECKRR_REF=tdarr
-HOST_CHECKRR_URL=${CHECKRR_REF}.${HOST_DOMAIN}
+CHECKRR_URL=${CHECKRR_REF}.${HOST_DOMAIN}
 CHECKRR_PORT=8585
 
 # Dozzle
 DOZZLE_REF=dozzle
-HOST_DOZZLE_URL=${DOZZLE_REF}.${HOST_DOMAIN}
+DOZZLE_URL=${DOZZLE_REF}.${HOST_DOMAIN}
 DOZZLE_PORT=8082
 
 # Gluetun
@@ -47,49 +62,72 @@ GLUETUN_PORT=
 
 # Homepage
 HOMEPAGE_REF=homepage
-HOST_HOMEPAGE_URL=${HOMEPAGE_REF}.${HOST_DOMAIN}
+HOMEPAGE_URL=${HOMEPAGE_REF}.${HOST_DOMAIN}
 HOMEPAGE_UI_PORT=3000
 HOMEPAGE_ALLOWED_HOSTS=*
 
 # Jellyfin
 JELLYFIN_REF=jellyfin
-HOST_JELLYFIN_URL=${JELLYFIN_REF}.${HOST_DOMAIN}
+JELLYFIN_URL=${JELLYFIN_REF}.${HOST_DOMAIN}
 JELLYFIN_PORT=8096
+
+# Jellyseerr
+JELLYSEERR_REF=jellyseerr
+JELLYSEERR_URL=${JELLYSEERR_REF}.${HOST_DOMAIN}
+JELLYSEERR_PORT=5055
+
+# Kavita
+KAVITA_REF=kavita
+KAVITA_URL=${KAVITA_REF}.${HOST_DOMAIN}
+KAVITA_PORT=5000
 
 # Lidarr
 LIDARR_REF=lidarr
-HOST_LIDARR_URL=${LIDARR_REF}.${HOST_DOMAIN}
+LIDARR_URL=${LIDARR_REF}.${HOST_DOMAIN}
 LIDARR_PORT=8686
 LIDARR_API_KEY=
 
+# Mylar3
+MYLAR_3_REF=mylar3
+MYLAR_3_URL=${MYLAR3_REF}.${HOST_DOMAIN}
+MYLAR_3_PORT=8090
+
+# Pinchflat
+PINCHFLAT_REF=pinchflat
+PINCHFLAT_URL=${PINCHFLAT_REF}.${HOST_DOMAIN}
+PINCHFLAT_PORT=8945
+PINCHFLAT_AUTH_USER=
+PINCHFLAT_AUTH_PASS=
+
 # Prowlarr
 PROWLARR_REF=prowlarr
-PROWLARR_HOST_URL=${PROWLARR_REF}.${HOST_DOMAIN}
+PROWLARR_URL=${PROWLARR_REF}.${HOST_DOMAIN}
 PROWLARR_PORT=9696
 
 # Radarr
 RADARR_REF=radarr
-RADARR_HOST_URL=${RADARR_REF}.${HOST_DOMAIN}
+RADARR_URL=${RADARR_REF}.${HOST_DOMAIN}
 RADARR_PORT=7878
 RADARR_API_KEY=
 
 # SABnzbd
 SABNZBD_REF=sabnzbd
-HOST_SABNZBD_URL=${SABNZBD_REF}.${HOST_DOMAIN}
+SABNZBD_URL=${SABNZBD_REF}.${HOST_DOMAIN}
 SABNZBD_UI_PORT=8080
 
 # Sonarr
 SONARR_REF=sonarr
-HOST_SONARR_URL=${SONARR_REF}.${HOST_DOMAIN}
+SONARR_URL=${SONARR_REF}.${HOST_DOMAIN}
 SONARR_PORT=8989
 SONARR_API_KEY=
 
 # Tdarr
 TDARR_REF=tdarr
-HOST_TDARR_URL=${TDARR_REF}.${HOST_DOMAIN}
-TDARR_PORT=8265
+TDARR_URL=${TDARR_REF}.${HOST_DOMAIN}
+TDARR_UI_PORT=8265
+TDARR_SERVER_PORT=8266
 
 # Traefik
 TRAEFIK_REF=traefik
-HOST_TRAEFIK_URL=${TRAEFIK_REF}.${HOST_DOMAIN}
+TRAEFIK_URL=${TRAEFIK_REF}.${HOST_DOMAIN}
 TRAEFIK_PORT=8089
