--- a/utility/tdarr/tdarr.compose.yaml
+++ b/utility/tdarr/tdarr.compose.yaml
@@ -7,12 +7,12 @@ services:
     image: ghcr.io/haveagitgat/tdarr:latest
     restart: unless-stopped
     ports:
-      - ${TDARR_PORT}:8265 # webUI port
-      - 8266:8266 # server port
+      - ${TDARR_UI_PORT}:8265 # webUI port
+      - ${TDARR_SERVER_PORT}:8266 # server port
     environment:
       - serverIP=0.0.0.0
-      - serverPort=8266
-      - webUIPort=${TDARR_PORT}
+      - serverPort=${TDARR_SERVER_PORT}
+      - webUIPort=${TDARR_UI_PORT}
       - internalNode=true
       - inContainer=true
       - ffmpegVersion=7
@@ -21,8 +21,6 @@ services:
       - openBrowser=true
       - maxLogSizeMB=10
       - cronPluginUpdate=
-      - NVIDIA_DRIVER_CAPABILITIES=all
-      - NVIDIA_VISIBLE_DEVICES=all
     volumes:
       - ./server:/app/server
       - ./configs:/app/configs
@@ -32,20 +30,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${TDARR_REF}.entrypoints=web"
       - "traefik.http.routers.${TDARR_REF}.rule=Host(`${HOST_TDARR_URL}`)"
-      - "traefik.http.services.${TDARR_REF}.loadbalancer.server.port=${TDARR_PORT}"
+      - "traefik.http.services.${TDARR_REF}.loadbalancer.server.port=${TDARR_UI_PORT}"
       - homepage.group=Utils
       - homepage.name=TDARR
       - homepage.icon=tdarr.png
       - homepage.showstats=true
       - homepage.href=http://${HOST_TDARR_URL}/
-    devices:
-      - /dev/dri:/dev/dri   
-    deploy:
-      resources:
-        reservations:
-          devices:
-          - driver: nvidia
-            count: all
-            capabilities: [gpu]
     
 
