--- a/arr/lidarr/lidarr.compose.yaml
+++ b/arr/lidarr/lidarr.compose.yaml
@@ -14,12 +14,12 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${LIDARR_REF}.entrypoints=web"
-      - "traefik.http.routers.${LIDARR_REF}.rule=Host(`${HOST_LIDARR_URL}`)"
+      - "traefik.http.routers.${LIDARR_REF}.rule=Host(`${LIDARR_URL}`)"
       - "traefik.http.services.${LIDARR_REF}.loadbalancer.server.port=${LIDARR_PORT}"
       - homepage.group=Arr
       - homepage.name=Lidarr
       - homepage.icon=lidarr.png
       - homepage.showstats=true
-      - homepage.href=http://${HOST_LIDARR_URL}/
+      - homepage.href=http://${LIDARR_URL}/
       - homepage.description= Music collection manager for Usenet and BitTorrent users.
     restart: unless-stopped
