--- a/arr/sabnzbd/sabnzbd.compose.yaml
+++ b/arr/sabnzbd/sabnzbd.compose.yaml
@@ -1,15 +1,14 @@
 services:
   sabnzbd:
     extends:
-      file: ../../vpn-service.compose.yaml
+      file: ../../service-base.compose.yaml
       service: arr-service
     image: lscr.io/linuxserver/sabnzbd:latest
     container_name: sabnzbd
     volumes:
       - ./config:/config
       - ${DOWNLOAD_NZBD_PATH}/complete:/downloads
-      - ${DOWNLOAD_NZBD_PATH}/incomplete:/incomplete-downloads 
-      - ${ARR_MEDIA_PATH}:/media/arr
+      - ${DOWNLOAD_NZBD_PATH}/incomplete:/incomplete-downloads
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${SABNZBD_REF}.entrypoints=web"
