update homepage config

--- a/.env.sample
+++ b/.env.sample
@@ -89,7 +89,7 @@ LIDARR_API_KEY=
 
 # Mylar3
 MYLAR_3_REF=mylar3
-MYLAR_3_URL=${MYLAR3_REF}.${HOST_DOMAIN}
+MYLAR_3_URL=${MYLAR_3_REF}.${HOST_DOMAIN}
 MYLAR_3_PORT=8090
 
 # Pinchflat
