--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ UMASK=022
 HOST_DOMAIN=servarr.local
 
 # Paths
-# CACHE_DRIVE=/mnt/cache
+CACHE_DRIVE=/mnt/cache
 DATA_BASE_PATH=/mnt/arr/data
 MEDIA_BASE_PATH=${DATA_BASE_PATH}/media
 DOWNLOADS_BASE_PATH=${DATA_BASE_PATH}/downloads
