--- a/media/jellyfin/jellyfin.compose.yaml
+++ b/media/jellyfin/jellyfin.compose.yaml
@@ -17,12 +17,12 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${JELLYFIN_REF}.entrypoints=web"
-      - "traefik.http.routers.${JELLYFIN_REF}.rule=Host(`${HOST_JELLYFIN_URL}`)"
+      - "traefik.http.routers.${JELLYFIN_REF}.rule=Host(`${JELLYFIN_URL}`)"
       - "traefik.http.services.${JELLYFIN_REF}.loadbalancer.server.port=${JELLYFIN_PORT}"
       - homepage.group=Media
       - homepage.name=Jellyfin
       - homepage.icon=jellyfin.png
       - homepage.showstats=true
-      - homepage.href=http://${HOST_JELLYFIN_URL}/
+      - homepage.href=http://${JELLYFIN_URL}/
       - homepage.description=Media solution that puts you in control of your media. Stream to any device from your own server, with no strings attached.
     restart: unless-stopped
