--- a/.env.sample
+++ b/.env.sample
@@ -104,6 +104,12 @@ PROWLARR_REF=prowlarr
 PROWLARR_URL=${PROWLARR_REF}.${HOST_DOMAIN}
 PROWLARR_PORT=9696
 
+# qbittorrent
+QBITTORRENT_REF=qbittorrent
+QBITTORRENT_URL=${QBITTORRENT_REF}.${HOST_DOMAIN}
+QBITTORRENT_UI_PORT=8085
+QBITTORRENT_DL_PORT=6881
+
 # Radarr
 RADARR_REF=radarr
 RADARR_URL=${RADARR_REF}.${HOST_DOMAIN}
