--- a/.env.sample
+++ b/.env.sample
@@ -47,7 +47,7 @@ BESZEL_KEY='ssh_...'
 BESZEL_TOKEN=
 
 # Checkrr
-CHECKRR_REF=tdarr
+CHECKRR_REF=checkrr
 CHECKRR_URL=${CHECKRR_REF}.${HOST_DOMAIN}
 CHECKRR_PORT=8585
 
