--- a/arr/qbittorrent/qbittorrent.compose.yaml
+++ b/arr/qbittorrent/qbittorrent.compose.yaml
@@ -6,7 +6,7 @@ services:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
     environment:
-      - WEBUI_PORT=${QBITTORRENT_PORT}
+      - WEBUI_PORT=${QBITTORRENT_UI_PORT}
       - TORRENTING_PORT=${QBITTORRENT_DL_PORT}
     volumes:
       - ./config:/config
@@ -14,11 +14,11 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${QBITTORRENT_REF}.entrypoints=web"
-      - "traefik.http.routers.${QBITTORRENT_REF}.rule=Host(`${QBITTORRENT_HOST}`)"
-      - "traefik.http.services.${QBITTORRENT_REF}.loadbalancer.server.port=${QBITTORRENT_PORT}"
+      - "traefik.http.routers.${QBITTORRENT_REF}.rule=Host(`${QBITTORRENT_URL}`)"
+      - "traefik.http.services.${QBITTORRENT_REF}.loadbalancer.server.port=${QBITTORRENT_UI_PORT}"
       - homepage.group=Arr
       - homepage.name=qBittorrent
       - homepage.icon=qbittorrent.png
-      - homepage.href=http://${QBITTORRENT_HOST}/
+      - homepage.href=http://${QBITTORRENT_URL}/
       - homepage.description=an open-source software alternative to µTorrent.
     restart: always
