add lazylibrarian for ebook support

--- a/.env.sample
+++ b/.env.sample
@@ -22,6 +22,7 @@ MEDIA_COMICS_PATH=${MEDIA_BASE_PATH}/comics
 MEDIA_EBOOKS_PATH=${MEDIA_BASE_PATH}/ebooks
 MEDIA_MANGA_PATH=${MEDIA_BASE_PATH}/manga
 
+
 # Download Paths
 DOWNLOAD_MOVIES_PATH=${DOWNLOADS_BASE_PATH}/movies
 DOWNLOAD_SERIES_PATH=${DOWNLOADS_BASE_PATH}/series
@@ -30,6 +31,7 @@ DOWNLOAD_MUSIC_PATH=${DOWNLOADS_BASE_PATH}/music
 DOWNLOAD_COMICS_PATH=${DOWNLOADS_BASE_PATH}/comics
 DOWNLOAD_TORRENT_PATH=${DOWNLOADS_BASE_PATH}/torrent
 DOWNLOAD_NZBD_PATH=${DOWNLOADS_BASE_PATH}/nzbd
+DOWNLOAD_BOOKS_PATH=${DOWNLOADS_BASE_PATH}/ebooks
 
 
 #### Service Values ####
@@ -80,6 +82,11 @@ JELLYSEERR_PORT=5055
 KAVITA_REF=kavita
 KAVITA_URL=${KAVITA_REF}.${HOST_DOMAIN}
 KAVITA_PORT=5000
+
+# LazyLibrarian
+LAZYLIB_REF=lazylibrarian
+LAZYLIB_URL=${LAZYLIB_REF}.${HOST_DOMAIN}
+LAZYLIB_PORT=5299
 
 # Lidarr
 LIDARR_REF=lidarr
