--- a/utility/beszel/beszel.compose.yaml
+++ b/utility/beszel/beszel.compose.yaml
@@ -33,11 +33,13 @@ services:
     network_mode: host
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./beszel_agent_data:/var/lib/beszel-agent
+      - ./config/beszel_agent_data:/var/lib/beszel-agent
       # monitor other disks / partitions by mounting a folder in /extra-filesystems
       - ${ARR_DRIVE}/.beszel:/extra-filesystems/sda1__ARR:ro
     environment:
       LISTEN: 45876
       HUB_URL: ${BESZEL_URL}
+    depends_on:
+      - beszel
     restart: unless-stopped
 
