More download clients

--- a/.env.sample
+++ b/.env.sample
@@ -30,14 +30,23 @@ DOWNLOAD_YOUTUBE_PATH=${DOWNLOADS_BASE_PATH}/youtube
 DOWNLOAD_MUSIC_PATH=${DOWNLOADS_BASE_PATH}/music
 DOWNLOAD_COMICS_PATH=${DOWNLOADS_BASE_PATH}/comics
 DOWNLOAD_TORRENT_PATH=${DOWNLOADS_BASE_PATH}/torrent
-DOWNLOAD_NZBD_PATH=${DOWNLOADS_BASE_PATH}/nzbd
+DOWNLOAD_NZB_PATH=${DOWNLOADS_BASE_PATH}/nzb
 DOWNLOAD_BOOKS_PATH=${DOWNLOADS_BASE_PATH}/ebooks
 
 
-#### Service Values ####
+# Prefered Services - Please select one, if you would like to use additional
+# you will need to start them by running `docker compose --profile profile up`
+
+USER_MEDIA_MGMT=Jellyfin #jellyfin or plex
+USER_TORRENT_CLIENT=qbittorrent #deluge, qbittorrent or transmission
+USER_NZB_CLIENT=sabnzbd #sabnzbd or nzbget
+
 
 # Comma seperated list of profiles to launch
-COMPOSE_PROFILES=jellyfin,plex
+COMPOSE_PROFILES=${USER_MEDIA_MGMT},${USER_TORRENT_CLIENT},${USER_NZB_CLIENT}
+
+
+#### Service Values ####
 
 # Bazarr
 BAZARR_REF=bazarr
@@ -55,6 +64,12 @@ BESZEL_TOKEN=
 CHECKRR_REF=checkrr
 CHECKRR_URL=${CHECKRR_REF}.${HOST_DOMAIN}
 CHECKRR_PORT=8585
+
+# Deluge
+DELUGE_REF=deluge
+DELUGE_URL=${DELUGE_REF}.${HOST_DOMAIN}
+DELUGE_UI_PORT=8112
+DELUGE_DL_PORT=6881
 
 # Dozzle
 DOZZLE_REF=dozzle
@@ -101,6 +116,11 @@ LIDARR_API_KEY=
 MYLAR_3_REF=mylar3
 MYLAR_3_URL=${MYLAR_3_REF}.${HOST_DOMAIN}
 MYLAR_3_PORT=8090
+
+# Nzbget
+NZBGET_REF=nzbget
+NZBGET_URL=${NZBGET_REF}.${HOST_DOMAIN}
+NZBGET_PORT=6789
 
 # Overseerr
 OVERSEERR_REF=overseerr
@@ -157,3 +177,9 @@ TDARR_SERVER_PORT=8266
 TRAEFIK_REF=traefik
 TRAEFIK_URL=${TRAEFIK_REF}.${HOST_DOMAIN}
 TRAEFIK_PORT=8089
+
+# Transmission
+TRANSMISSION_REF=transmission
+TRANSMISSION_URL=${TRANSMISSION_REF}.${HOST_DOMAIN}
+TRANSMISSION_UI_PORT=9091
+TRANSMISSION_DL_PORT=51413
