--- a/sabnzbd/sabnzbd.compose.yaml
+++ b/sabnzbd/sabnzbd.compose.yaml
@@ -7,14 +7,14 @@ services:
     container_name: sabnzbd
     volumes:
       - ./config:/config
-      - ${DOWNLOAD_NZBD_PATH}/complete:/downloads
-      - ${DOWNLOAD_NZBD_PATH}/incomplete:/incomplete-downloads
+      - ${DOWNLOAD_NZB_PATH}/complete:/downloads
+      - ${DOWNLOAD_NZB_PATH}/incomplete:/incomplete-downloads
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${SABNZBD_REF}.entrypoints=web"
       - "traefik.http.routers.${SABNZBD_REF}.rule=Host(`${SABNZBD_URL}`)"
       - "traefik.http.services.${SABNZBD_REF}.loadbalancer.server.port=${SABNZBD_UI_PORT}"    
-      - homepage.group=Arr
+      - homepage.group=Clients
       - homepage.name=SABnzbd
       - homepage.icon=sabnzbd.png
       - homepage.showstats=true
